welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:3: error: not found: value dimension
for (i<- 0 to dimension){
              ^